syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.davincischools.leo.proto.greeter";

package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloStreamReply (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  optional string greeter_name = 1;
}

message HelloReply {
  optional string reply_message = 1;
}